# metricool

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  serve.py  smithery.yaml
src/mcp_metricool/: __init__.py  __main__.py  config.py  server.py
src/mcp_metricool/tools/: tools.py
src/mcp_metricool/utils/: utils.py
